logs/django-couchdb-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_couchdb_utils'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/auth'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/auth/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/auth/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/auth/_design/views/users_by_email'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/auth/_design/views/users_by_username'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/cache'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/cache/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/cache/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/cache/_design/views/cache_by_key'...
Compiling './lib/python3.5/site-packages/django_couchdb_utils/cache/couch.py'...
***   File "./lib/python3.5/site-packages/django_couchdb_utils/cache/couch.py", line 56
    raise ValueError, "Key '%s' not found" % key
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_couchdb_utils/email'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/email/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/email/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/email/_design/views/emails'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/issued_lifetime_view'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/openid_view'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/timestamp_view'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/url_handle_view'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/url_timestamp_salt_view'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/_design/views/url_view'...
Compiling './lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/forms.py'...
***   File "./lib/python3.5/site-packages/django_couchdb_utils/openid_consumer/forms.py", line 22
    raise forms.ValidationError, self.duplicate_email_error
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_couchdb_utils/registration'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/_design/views/unactivated_users'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/_design/views/users_by_activationkey'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/backends'...
Compiling './lib/python3.5/site-packages/django_couchdb_utils/registration/backends/__init__.py'...
***   File "./lib/python3.5/site-packages/django_couchdb_utils/registration/backends/__init__.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/backends/default'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/backends/simple'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/management'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/registration/management/commands'...
Compiling './lib/python3.5/site-packages/django_couchdb_utils/registration/management/commands/cleanup-registrations.py'...
***   File "./lib/python3.5/site-packages/django_couchdb_utils/registration/management/commands/cleanup-registrations.py", line 48
    print 'Deleting user {user} {user_id} (registered {registered}, last login {last_login}).'.format(
                                                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions/_design'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions/_design/views'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions/_design/views/sessions_by_key'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions/management'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/sessions/management/commands'...
Listing './lib/python3.5/site-packages/django_couchdb_utils/test'...
Listing './lib/python3.5/site-packages/django_couchdb_utils-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
